examples/negative/derive/derive_json_sum_type.kai
# Negative fixture (derive contract): `#[derive(Json)]` binds a record
# to a JSON object. A sum type needs a tagged-union encoding, which is
# a separate choice the derive does not make on the user's behalf, so
# it is rejected rather than given an arbitrary convention.

#[derive(Json)]
type Shape = Circle(Real) | Square(Real)

fn main() : Int = 0
